<resources>
    <string name="app_name">Chuck Norris Facts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_search">Search</string>
    <string name="nav_about_us">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Categories</item>
        <item>Favourites</item>
        <item>Search</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_joke">Random Jokes</string>
    <string name="generate_button">Generate Jokes</string>
    <string name="error_message">Cannot connect to the internet. Please check your internet connection.</string>
    <string name="about_us">Chuck Norris Facts has been developed by Anugrah Rochmat </string>
    <string name="source_code">Source Code: <a href="https://github.com/AnugrahRochmat/ChuckNorrisApp">https://github.com/AnugrahRochmat/ChuckNorrisApp</a></string>
    <string name="api_name">Api: <a href="https://api.chucknorris.io"> https://api.chucknorris.io</a> </string>
    <string name="share_jokes">Share Jokes</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_random">Random</string>
    <string name="about">About</string>
</resources>
