<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_padding_16"
    tools:context="com.anugrahrochmat.chuck.activity.EachCategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/random_joke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_16"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    tools:text="@string/random_joke"/>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/generate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_16"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/black"
                android:text="@string/generate_button"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_width_height"
            android:layout_height="@dimen/progress_width_height"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/margin_padding_16"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text="@string/error_message"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>
