<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anugrahrochmat.chuck.fragment.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_padding_16"
            android:layout_marginRight="@dimen/margin_padding_16"
            android:layout_marginLeft="@dimen/margin_padding_16">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_above="@id/generate_button"
                android:layout_marginBottom="@dimen/margin_padding_16">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/random_joke"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_padding_16"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:gravity="center_horizontal"
                            tools:text="@string/random_joke"/>

                    </android.support.v7.widget.CardView>
                </RelativeLayout>
            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/generate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_padding_16"
                android:src="@drawable/ic_shuffle_black_24dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/black"
                android:text="@string/generate_button"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/progress_width_height"
                android:layout_height="@dimen/progress_width_height"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/margin_padding_16"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                tools:text="@string/error_message"
                android:visibility="gone"/>

        </RelativeLayout>

</FrameLayout>
